--- a/Templete 02/index.html
+++ b/Templete 02/index.html
@@ -5,12 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template 02</title>
+    <!-- custom css -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <id class="header">
+    <div class="header">
         <div class="container">
             <img src="images/logo.png" class="logo" alt="">
+            <div class="header-text">
+                <h1>The purpose is to <br> teach, bring learning to people</h1>
+                <span class="square"></span>
+                <p>There are many bariations of passages of lerem ipsum available, but the majority have suffered alteration in some form,
+                    by injected humour, or randomised words which don't look even slightly believable.
+                </p>
+                <button class="common-btn">Read More</button>
+                <div class="inline">
+                    <span class="line-1"></span><br>
+                    <span class="line-2"></span><br>
+                    <span class="line-3"></span>
+                </div>
+            </div>
         </div>
-    </id>
+    </div>
+    <nav id="sideNav">
+        <ul>
+            <li><a href="">HOME</a></li>
+            <li><a href="">ABOUT US</a></li>
+            <li><a href="">FEATURE </a></li>
+            <li><a href="">COURSES</a></li>
+            <li><a href="">OFFER</a></li>
+            <li><a href="">CONTACT</a></li>
+        </ul>
+    </nav>
+
+    <img src="images/menu.png" id="menuBtn" alt="">
 </body>
+<script>
+    var menuBtn = document.getElementById("menuBtn");
+    var sideNav = document.getElementById("sideNav");
+
+    sideNav.style.right = "-250px";
+    menuBtn.onclick = function(){
+        if(sideNav.style.right == "-250px"){
+            sideNav.style.right = "0px";
+        }
+        else{
+            sideNav.style.right = "-250px";
+        }
+    }
+</script>
 </html>
